--- a/week_1_basics_n_setup/2_docker_sql/Dockerfile
+++ b/week_1_basics_n_setup/2_docker_sql/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.9.1
 
 RUN apt-get install wget
-RUN pip install pandas sqlalchemy psycopg2
+RUN pip install pandas sqlalchemy psycopg2 fastparquet
 
 WORKDIR /app
-COPY pipeline.py pipeline.py 
+COPY ingest_data.py ingest_data.py 
 
-ENTRYPOINT [ "python", "pipeline.py" ]
+ENTRYPOINT [ "python", "ingest_data.py" ]
